--- a/PS01/index.html
+++ b/PS01/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <svg width="500px" height="500px"></svg>
+    <button type ="button" onclick ="buttonClicked()">click me</button>
+    <svg width="800px" height="600px"></svg>
 
 </body>
 
